Updated to WS 4.7.x and FCore 5, and markdig/yamldotnet to their latest.

--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -123,32 +123,85 @@
       </section>
       <section class="align-center">
         <div class="container">
-          <h2>Our achievements.</h2>
+          <h2>IntelliFactory at a glance</h2>
           <p class="width-650">
-            We are a factor in the F# community that roles with the latest tech
-            for 15+ years.
+            One of the first F# consultancies, specializing in the most demanding F# web, cloud and desktop projects
+            for 16+ years.
           </p>
           <hr class="space" />
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-4">
               <div class="counter">
                 <div>
                   <h3>F# source repositories</h3>
                   <div class="value text-lg">
-                    <span data-to="400" data-speed="1500">400</span>
+                    <span data-to="420" data-speed="1500">420</span>
                     <span>+</span>
                   </div>
+                  <p>With over 100 internal tools and experimental projects, we are building the future of F#.</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4">
+              <div class="counter">
+                <div>
+                  <h3>Lines of F# code written</h3>
+                  <div class="value text-lg">
+                    <span data-to="1800000" data-speed="1500">1.8M</span>
+                    <span>+</span>
+                  </div>
+                  <p>One of the largest F# codebases globally and continuously growing.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
               <div class="counter">
                 <div>
                   <h3>F# enterprise applications built</h3>
                   <div class="value text-lg">
-                    <span data-to="30" data-speed="1500">30</span>
+                    <span data-to="40" data-speed="1500">40</span>
                     <span>+</span>
                   </div>
+                  <p>Complete solutions in finance, marketing automation, e-learning, and many others. Have a project idea?<br /> Contact us now.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr class="space" />
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="counter">
+                <div>
+                  <h3>NuGet packages authored</h3>
+                  <div class="value text-lg">
+                    <span data-to="163" data-speed="1500">163</span>
+                    <span>+</span>
+                  </div>
+                  <p>All open source, available on a permissive, free license for the greater good.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="counter">
+                <div>
+                  <h3>NuGet packages downloaded</h3>
+                  <div class="value text-lg">
+                    <span data-to="2900000" data-speed="1500">2.9M</span>
+                    <span>+</span>
+                  </div>
+                  <p>4000+ registered developers and hundreds of commercial applications built on top of our codebase.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="counter">
+                <div>
+                  <h3>Functional programming</h3>
+                  <div class="value text-lg">
+                    <span data-to="16" data-speed="1500">16</span>
+                    <span>+</span>
+                  </div>
+                  <p>16+ years of F# research and FP development, and consulting for companies of all sizes.</p>
                 </div>
               </div>
             </div>
