--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -36,7 +36,7 @@
         <div class="menu-cnt">
           <ul>
             <li>
-              <a href="/">Consulting</a>
+              <a href="/">Company</a>
             </li>
             <li class="mega-dropdown mega-tabs mega-open-source">
               <a href="#">Open Source</a>
